--- a/buildplatforms/buildplatform-mx4/1.0/Dockerfile
+++ b/buildplatforms/buildplatform-mx4/1.0/Dockerfile
@@ -4,9 +4,13 @@ USER root
 
 RUN apt-get update && apt-get install -y gawk wget git-core sudo cpio \
 diffstat unzip texinfo gcc-multilib u-boot-tools rsync cbootimage bc \
-build-essential kmod chrpath socat mtd-utils device-tree-compiler mtools \
+build-essential kmod chrpath socat mtd-utils device-tree-compiler mtools autoconf libtool \
 lzop dosfstools parted libncurses5-dev patchutils tmux vim curl python \
-libsdl1.2-dev libssl-dev && rm -rf /var/lib/apt/lists/*
+libsdl1.2-dev libssl-dev
+
+RUN apt-get install -y bison flex python-m2crypto
+
+RUN rm -rf /var/lib/apt/lists/*
 
 ENV USER_HOME /home/builder
 
